# goit-pythonweb-hw-10

./: .env  .gitignore  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 10c4d6ce58b1_init.py
src/: schemas.py
src/api/: api.py
src/config/: config.py
src/database/: db.py  models.py
src/repository/: repository.py
src/services/: services.py
